--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"label": "Run Backend (Flask)",
 			"type": "shell",
-			"command": "python3 server.py",
+			"command": "source .venv/bin/activate && python server.py",
 			"isBackground": true,
 			"problemMatcher": [],
 			"group": "build"
