--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -49,7 +49,7 @@ services:
       - .:/app # Mount entire project for dev container access
       - /app/__pycache__ # Exclude pycache
     # Keep container running for dev container access
-    command: ["python", "-m", "flask", "--app", "app.main", "run", "--host=0.0.0.0", "--port=8000", "--reload", "--debug"]
+    command: ["python", "-m", "app.main"]
     networks:
       - markboard
 
@@ -59,7 +59,7 @@ services:
       dockerfile: Dockerfile.dev
     container_name: markboard-frontend-dev
     ports:
-      - "3000:5173"  # Vite dev server (mapping to same external port as production)
+      - "3000:8080"  # Vite dev server (mapping to correct internal port)
     volumes:
       - ./frontend:/app  # Live reload for frontend
       - /app/node_modules  # Exclude node_modules from host
