--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,7 +20,7 @@ services:
       timeout: 20s
       retries: 10
     networks:
-      - markboard
+      - internal
 
   backend:
     build:
@@ -47,11 +47,11 @@ services:
     restart: unless-stopped
     volumes:
       - .:/app # Mount entire project for dev container access
-      - /app/__pycache__ # Exclude pycache
+      - backend_pycache:/app/__pycache__ # Exclude pycache
     # Keep container running for dev container access
     command: ["python", "-m", "app.main"]
     networks:
-      - markboard
+      - internal
 
   frontend:
     build:
@@ -62,13 +62,13 @@ services:
       - "3000:8080"  # Vite dev server (mapping to correct internal port)
     volumes:
       - ./frontend:/app  # Live reload for frontend
-      - /app/node_modules  # Exclude node_modules from host
+      - frontend_node_modules:/app/node_modules  # Exclude node_modules from host
     environment:
       - VITE_API_URL=http://localhost:8000
     depends_on:
       - backend
     networks:
-      - markboard
+      - internal
 
   phpmyadmin:
     image: phpmyadmin:latest
@@ -84,12 +84,16 @@ services:
       - db
     restart: unless-stopped
     networks:
-      - markboard
+      - internal
 
 networks:
-  markboard:
+  internal:
     driver: bridge
 
 volumes:
   db_data:
+    driver: local
+  backend_pycache:
+    driver: local
+  frontend_node_modules:
     driver: local
