--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       timeout: 20s
       retries: 10
     networks:
-      - markboard
+      - internal
 
   backend:
     image: ghcr.io/shadowjumper3000/markboard-backend:latest
@@ -48,7 +48,7 @@ services:
       timeout: 10s
       retries: 3
     networks:
-      - markboard
+      - internal
 
   frontend:
     build:
@@ -61,10 +61,11 @@ services:
       - backend
     restart: unless-stopped
     networks:
-      - markboard
+      - internal
+      - proxy
 
 networks:
-  markboard:
+  internal:
     driver: bridge
   proxy:
     external: true
