--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+  # Database service
   db:
     image: mysql:8.0
     container_name: markboard-db-dev
@@ -22,6 +23,7 @@ services:
     networks:
       - internal
 
+  # Backend API service
   backend:
     build:
       context: .
@@ -40,7 +42,7 @@ services:
       DEBUG: "true"
       BCRYPT_ROUNDS: 12
     ports:
-      - "8000:8000"
+      - "8000:8000"  # Backend API
     depends_on:
       db:
         condition: service_healthy
@@ -53,13 +55,14 @@ services:
     networks:
       - internal
 
+  # Frontend application service  
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile.dev
     container_name: markboard-frontend-dev
     ports:
-      - "3000:8080"  # Vite dev server (mapping to correct internal port)
+      - "3000:5173"  # Frontend application
     volumes:
       - ./frontend:/app  # Live reload for frontend
       - frontend_node_modules:/app/node_modules  # Exclude node_modules from host
@@ -70,6 +73,7 @@ services:
     networks:
       - internal
 
+  # Database administration interface (phpMyAdmin)
   phpmyadmin:
     image: phpmyadmin:latest
     container_name: markboard-phpmyadmin-dev
@@ -79,7 +83,7 @@ services:
       PMA_USER: markboard_user
       PMA_PASSWORD: markboard_password
     ports:
-      - "8080:80"
+      - "8080:80"  # Database admin interface
     depends_on:
       - db
     restart: unless-stopped
