--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -19,5 +19,5 @@ COPY . .
 # Expose port for Vite dev server
 EXPOSE 5173
 
-# Start development server
-CMD ["bun", "run", "dev", "--host"]
+# Start development server with host binding for Docker
+CMD ["bun", "run", "dev", "--host", "0.0.0.0"]
