--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,15 +28,14 @@ jobs:
         script: |
           set -e
           
-          # Define application directory
-          APP_DIR="/opt/markboard"
+          # Define application directory in hetzner user's home directory
+          APP_DIR="/home/${{secrets.HETZNER_USER}}/markboard"
           REPO_URL="https://github.com/${{ github.repository }}.git"
           
-          # Create application directory if it doesn't exist
+          # Create application directory if it doesn't exist (no sudo needed in user's home)
           if [ ! -d "$APP_DIR" ]; then
             echo "Creating application directory..."
-            sudo mkdir -p $APP_DIR
-            sudo chown $USER:$USER $APP_DIR
+            mkdir -p $APP_DIR
           fi
           
           # Navigate to application directory
@@ -50,19 +49,25 @@ jobs:
             echo "Updating repository..."
             git fetch origin
             git reset --hard origin/prod
+            git clean -fd
           fi
           
           # Create .env file from GitHub secret
           echo "Creating production environment file..."
           echo '${{ secrets.ENV_FILE }}' > .env
           
-          # Stop existing containers
+          # Stop existing containers (only for this project)
           echo "Stopping existing containers..."
-          docker compose down || true
+          docker compose down --remove-orphans || true
           
-          # Remove old images to free space
-          echo "Cleaning up old Docker images..."
-          docker system prune -f
+          # Remove only this project's Docker images and containers to free space
+          echo "Cleaning up project Docker resources..."
+          docker compose down --volumes --remove-orphans || true
+          
+          # Remove only markboard-related images and containers
+          echo "Removing old markboard images..."
+          docker images --filter "label=app=markboard" -q | xargs -r docker rmi -f || true
+          docker container prune -f --filter "label=app=markboard" || true
           
           # Build and start services
           echo "Building and starting services..."
@@ -72,7 +77,15 @@ jobs:
           echo "Waiting for services to start..."
           sleep 30
           
-          echo "🚀 Deployment completed successfully!"
+          # Verify deployment
+          echo "Verifying deployment..."
+          if docker compose ps | grep -q "Up"; then
+            echo "🚀 Deployment completed successfully!"
+          else
+            echo "❌ Deployment verification failed!"
+            docker compose logs --tail=50
+            exit 1
+          fi
           
           # Show container status
           docker compose ps
