refactor: Update proxy network configuration to use external network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,8 +79,7 @@ networks:
   internal:
     driver: bridge
   proxy:
-    driver: bridge
-    name: markboard_proxy
+    external: true
 
 volumes:
   db_data:
