--- a/.env-example
+++ b/.env-example
@@ -1,20 +1,32 @@
-# Markboard Backend Environment Variables
-# Copy this file to .env and update values for your environment
+# Markboard Production Environment Variables
+# Copy this file to .env on your production server
 
 # Database Configuration
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_USER=markboard_user
-MYSQL_PASSWORD=markboard_password
-MYSQL_DATABASE=markboard
+MYSQL_HOST=
+MYSQL_PORT=
+MYSQL_ROOT_PASSWORD=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
 
-# JWT Configuration (CHANGE IN PRODUCTION!)
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRY_HOURS=24
+# JWT Configuration (CRITICAL: Change these in production!)
+JWT_SECRET=
+JWT_EXPIRY_HOURS=
 
 # Flask Configuration
-FLASK_ENV=development
-DEBUG=true
+FLASK_ENV=
+DEBUG=
 
 # Security
-BCRYPT_ROUNDS=12
+BCRYPT_ROUNDS=
+
+# Domain Configuration (for external nginx proxy)
+DOMAIN=
+VITE_API_URL=
+
+# Optional: If you need specific ports exposed (usually not needed with external proxy)
+# BACKEND_PORT
+# FRONTEND_PORT
+# Admin user credentials for seeding
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
