refactor: Update admin user credentials to use environment variables and configure CORS for development only

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -41,6 +41,9 @@ services:
       FLASK_DEBUG: 1
       DEBUG: "true"
       BCRYPT_ROUNDS: 12
+      DOMAIN: localhost
+      ADMIN_EMAIL: dev@example.com
+      ADMIN_PASSWORD: devpassword
     ports:
       - "8000:8000"  # Backend API
     depends_on:
