--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       DEBUG: "false"
       BCRYPT_ROUNDS: ${BCRYPT_ROUNDS:-12}
       DOMAIN: ${DOMAIN}
+      VITE_API_URL: ${VITE_API_URL}
       ADMIN_EMAIL: ${ADMIN_EMAIL}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD}
     # No ports exposed - internal access only
