--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,5 @@
 # Development requirements - testing and development tools
+flask-cors==4.0.0
 pytest==7.4.4
 pytest-cov==4.1.0
 pytest-mock==3.12.0
