chore: Update Docker configurations to persist only the data directory and add .dockerignore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
         condition: service_healthy
     restart: unless-stopped
     volumes:
-      - app_data:/app/data
+      - ./data:/app/data
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8000/health" ]
       interval: 30s
