refactor: Remove data directory setup from CI and adjust Dockerfile for directory creation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
         condition: service_healthy
     restart: unless-stopped
     volumes:
-      - ./data:/app/data
+      - app_data:/app/data
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8000/health" ]
       interval: 30s
