refactor: Organize and format .gitignore entries for improved readability

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,23 @@
+# Ignore all Markdown files except README.md
 *.md
 !README.md
+
+# Virtual environment
 .venv
+
+# Python cache files and directories
 __pycache__/
 *.pyc
+
+# macOS system files
 .DS_Store
+
+# Environment variables
 .env
+
+# Testing and type-checking caches
 .pytest_cache/
 .mypy_cache/
+
+# Data directory
+data/*
