--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,3 +9,4 @@ mypy==1.9.0
 httpx==0.27.0  # For testing HTTP requests
 factory-boy==3.3.0  # For test data generation
 pre-commit==3.6.2  # Git hooks for code quality
+requests==2.31.0  # For development and testing
