fix: Populate default values in .env-example for database and configuration settings

--- a/.env-example
+++ b/.env-example
@@ -1,26 +1,26 @@
 # Database Configuration
-MYSQL_HOST= 
-MYSQL_PORT= 
-MYSQL_ROOT_PASSWORD= 
-MYSQL_USER= 
-MYSQL_PASSWORD= 
-MYSQL_DATABASE= 
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_ROOT_PASSWORD=root
+MYSQL_USER=user
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=markboard
 
 # JWT Configuration (CRITICAL: Change these in production!)
-JWT_SECRET= 
-JWT_EXPIRY_HOURS= 
+JWT_SECRET=your_jwt_secret
+JWT_EXPIRY_HOURS=24
 
 # Flask Configuration
-FLASK_ENV= 
-DEBUG= 
+FLASK_ENV=development
+DEBUG=True
 
 # Security
-BCRYPT_ROUNDS= 
+BCRYPT_ROUNDS=12
 
 # Domain Configuration (for external nginx proxy)
-DOMAIN= 
-VITE_API_URL= 
+DOMAIN=localhost
+VITE_API_URL=http://localhost:80/api
 
 # Admin user credentials for seeding
-ADMIN_EMAIL= 
-ADMIN_PASSWORD= 
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=admin_password
