fix: Update admin user credentials in .env-example for production setup

--- a/.env-example
+++ b/.env-example
@@ -22,5 +22,6 @@ DOMAIN=localhost
 VITE_API_URL=http://localhost:80/api
 
 # Admin user credentials for seeding
-ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=admin_password
+# These will be used only for production setup, to change development admin user, edit docker-compose.dev.yml
+ADMIN_EMAIL=admin@email.com
+ADMIN_PASSWORD=adminpassword
