--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,95 @@
-name: CD Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ prod ]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: test_root_password
+          MYSQL_DATABASE: test_markboard
+          MYSQL_USER: test_user
+          MYSQL_PASSWORD: test_password
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+
+      - name: Set up test environment
+        env:
+          MYSQL_HOST: localhost
+          MYSQL_PORT: 3306
+          MYSQL_USER: test_user
+          MYSQL_PASSWORD: test_password
+          MYSQL_DATABASE: test_markboard
+          JWT_SECRET: test_jwt_secret_for_ci
+          FLASK_ENV: testing
+        run: |
+          echo "MYSQL_HOST=localhost" >> $GITHUB_ENV
+          echo "MYSQL_PORT=3306" >> $GITHUB_ENV
+          echo "MYSQL_USER=test_user" >> $GITHUB_ENV
+          echo "MYSQL_PASSWORD=test_password" >> $GITHUB_ENV
+          echo "MYSQL_DATABASE=test_markboard" >> $GITHUB_ENV
+          echo "JWT_SECRET=test_jwt_secret_for_ci" >> $GITHUB_ENV
+          echo "FLASK_ENV=testing" >> $GITHUB_ENV
+
+      - name: Run tests with coverage
+        env:
+          MYSQL_HOST: localhost
+          MYSQL_PORT: 3306
+          MYSQL_USER: test_user
+          MYSQL_PASSWORD: test_password
+          MYSQL_DATABASE: test_markboard
+          JWT_SECRET: test_jwt_secret_for_ci
+          FLASK_ENV: testing
+        run: |
+          python -m pytest --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=70 -v
+
+      - name: Upload coverage reports
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
+          flags: backend
+          name: backend-coverage
+          fail_ci_if_error: false
+
+      - name: Build Docker image (verification)
+        run: |
+          docker build -t markboard:ci-test .
+          echo "✅ Docker build successful"
+
+      - name: Frontend tests
+        working-directory: ./frontend
+        run: |
+          npm ci
+          npm run build
+          echo "✅ Frontend build successful"
+
   deploy:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/prod'
+    needs: test
+    if: github.ref == 'refs/heads/prod' && github.event_name == 'push'
 
     steps:
       - name: Checkout code
