--- a/pytest.ini
+++ b/pytest.ini
@@ -14,12 +14,11 @@ addopts =
     --cov-report=html:htmlcov
     --cov-report=xml
     --cov-fail-under=70
-    --ignore=tests/test_seed_data.py
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
     unit: marks tests as unit tests
-    seed_data: marks tests related to data seeding (may be unstable in CI)
+    seed_data: marks tests related to data seeding (now fixed)
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
